# fashion_img_search

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  environment.yml  pyproject.toml  requirements.txt
fis/app/: app.py
fis/detection/: base.py  dummy.py
fis/embedding/: base.py  timm.py
fis/feature_extraction/: run.py
fis/feature_extraction/detection/: base.py  dummy.py
fis/feature_extraction/embedding/: timm.py
fis/feature_extraction/pipeline/: base.py  factory.py  pipeline.py
fis/pipeline/: base.py  pipeline.py
fis/similarity_search/milvus/: collection.py
fis/utils/: config.py  constants.py  s3.py
fis/utils/data/: download_fashionpedia.py
scraping/: Makefile  scrapy.cfg
scraping/scraping/: engine.py  items.py  middlewares.py  pipelines.py  settings.py  validators.py
scraping/scraping/loaders/: mrporter.py  netaporter.py  shein.py
scraping/scraping/spiders/: mrporter.py  netaporter.py  shein.py
